# ppds

./: .gitignore  Dockerfile  job_output_1172.txt
0_Debugging_Nested_Loop/: CMakeLists.txt  NestedLoop.cpp  NestedLoopUtils.hpp
0_Nested_Loop/: CMakeLists.txt  NestedLoop.cpp  NestedLoopUtils.hpp  ThreadedLoad.h
1_Parallelization/: CMakeLists.txt  HashJoin.h  Join.cpp  Join.hpp  JoinUtils.hpp  MergeSort.h  NestedLoopJoin.h  SortMergeJoin.h  ThreadPool.h  ThreadedLoad.h
2_Memory_Hierarchy/: CMakeLists.txt  CustomAllocator.h  HashJoin.h  Join.cpp  JoinUtils.hpp  RingBuffer.h  SortMergeJoin.h  ThreadedLoad.h  generated_variables.h
3_Partitioning/: CMakeLists.txt  HashJoin.h  Join.cpp  JoinUtils.hpp  MemoryLocker.h  Partitioning.cpp  Partitioning.h  SortMergeJoin.h  TestPartitioning.cpp  ThreadPool.h  generated_variables.h
4_Strings/: CMakeLists.txt  Join.cpp  JoinUtils.hpp  PathCompressionTrie.h  RadixTree.h  TestPathCompressionTrie.cpp  TestTrie.cpp  Trie.cpp  Trie.h  trie.h
DataGenerators/: create_data.sh  create_only_matches.sh  create_skewed_data.sh  create_strings.sh
DataGenerators/StringDataGenerator/: generateStringData.py
DataGenerators/data/: cast_info_1StringMatch.csv  cast_info_stolen_strings.csv  cast_info_uniform.csv  title_info_1StringMatch.csv  title_info_all_join_keys_equal.csv  title_info_uniform.csv
DataGenerators/generator_code/: main.py
Util/: cache_sizes.py  cache_sizes_to_file.py
Util/include/: Logger.h  generated_variables.h
